# bioplausible

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FABRICPC.plan.md  LICENSE  README.md  README2.md  REFACTOR.md  REFACTOR.next.md  REFACTOR.start.md  REFACTOR2.md  SCIENTIST.md  SCIENTIST_GUIDE.md  TODO.md  TODO.start.md  TODO2.md  TODO3.md  VERIFICATION.md  bioplausible.db  bioplausible.db-shm  bioplausible.db-wal  generate_report.sh  launch_leaderboard.py  launch_studio.py  play_scientist.sh  pyproject.toml  pyrightconfig.json  requirements.txt  run_benchmark.sh  run_benchmarks.sh  run_equitile_ui.py  run_lab.sh  run_leaderboard.sh  run_scientist.sh  run_ui.sh  smoke_test_all.py  (+6 more)
asi_evolve/: README.md  main.py
benchmark_results/: benchmark_20260224_235744.json  benchmark_20260225_164916.json  report_20260224_235744.txt  report_20260225_164916.txt
benchmarks/: benchmark_equitile_comprehensive.py  benchmark_equitile_performance.py
bioplausible/: __init__.py  acceleration.py  analysis.py  analysis_tools.py  cli.py  compat.py  config.py  config_legacy.py  config_loader.py  config_schema.py  core.py  datasets.py  deployment.py  energy.py  export.py  generation.py  hybrid_optimizer.py  kernel.py  runner.py  sklearn_interface.py  statistics.py  tracking.py  utils.py  visualization.py  visualization_tools.py
bioplausible_ui/: leaderboard_data.py  leaderboard_widgets.py  leaderboard_window.py  studio.py  studio_sidebar.py
configs/: backprop_mnist.yaml  eqprop_shakespeare.yaml  forward_forward_mnist.yaml  mep_mnist.yaml  rl_cartpole.yaml  sweep_phase1.yaml
docs/: ATPC.md  ATPC_GUIDE.md  ATPC_Performance.md  BREAKTHROUGH_EVIDENCE.md  ENHANCEMENTS_SUMMARY.md  EQUITILE.md  EQUITILE_MIGRATION_GUIDE.md  EquiTile.md  EquiTile_HONEST.md  MEP_INTEGRATION.md  MEP_INTEGRATION_SUMMARY.md  QUICKSTART.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md
examples/: cross_domain_demo.py  demo_broken_symmetry.py  demo_deep_hebbian.py  demo_healing.py  demo_memory_wall.py  discovery_demo.py  equitile_advanced_usage.py  equitile_mode_comparison.py  equitile_production_training.py  fabricpc_mnist_bridge.py  fabricpc_six_way_comparison.py  fair_comparison_example.py  ff_mnist.yaml  hebbian_rl.yaml  model_introspection.py  online_learning_demo.py  optuna_complete_example.py  optuna_demo.db  optuna_integration_test.py  pepita_mnist.yaml  phase1_analysis_demo.py  shallow_benchmark.db  shallow_benchmark.py  simple_sklearn.py  tutorials.py
game_rpg/: core.py  interface.py  quests.py  upgrades.py
game_wrapper/: EVALUATION.md  README.md  __init__.py  audio.py  data.py  engine.py  game_elements.py  launcher.py  main.py  player.py  worker_process.py
mep/: .gitignore  README.md  deep_scaling_results.json  extended_test_results.json  memory_profile_results.json  performance_results.json  pyproject.toml
mep/benchmarks/: performance_suite.py
mep/docs/: index.md  outreach_plan.md
mep/docs/research/: phase2_summary.md  phase2_week1-2.md  speed_analysis.md
mep/examples/: benchmark_mnist.py  benchmark_permuted_mnist.py  demo_ep_vs_backprop.py  memory_comparison.py  mini_benchmark.py  mnist_comparison.py  profile_ep_speed.py  profile_memory_detailed.py  profile_settling.py  profile_settling_memory.py  quickstart.py  run_extended_tests.py  test_continual_learning.py  test_deep_scaling.py  train_char_lm.py  train_cnn.py  validate_memory_scaling.py  verify_o1_memory.py  verify_o1_memory_v2.py
mep/mep/: __init__.py  optimizers_legacy.py
mep/mep/benchmarks/: baselines.py  compare.py  continual_learning.py  ewc_baseline.py  metrics.py  niche_benchmarks.py  runner.py  tuned_compare.py  visualization.py
mep/mep/benchmarks/config/: full_comparison.yaml
mep/mep/cuda/: __init__.py  kernels.py
mep/mep/optimizers/: __init__.py  composite.py  energy.py  ep_optimizer.py  ewc.py  inspector.py  monitor.py  o1_memory.py  o1_memory_v2.py  settling.py
mep/mep/optimizers/strategies/: __init__.py  base.py  constraint.py  feedback.py  gradient.py  update.py
mep/mep/presets/: __init__.py
mep/tests/: conftest.py
mep/tests/integration/: test_amp.py  test_amp_repro.py  test_cnn_support.py  test_convergence.py  test_numerical_gradients.py  test_training_loop.py
mep/tests/regression/: test_benchmarks.py  test_ep_baseline.py  test_ep_smoke.py  test_performance_baseline.py
mep/tests/unit/: test_adaptive_settling_advanced.py  test_architectures.py  test_classification.py  test_continual_learning.py  test_conv2d.py  test_cuda_kernels.py  test_gradient_verification.py  test_inspector_types.py  test_local_ep_cnn.py  test_memory_and_spectral_ep.py  test_monitor.py  test_natural_gradient.py  test_new_api.py  test_optimizer_energy.py  test_optimizers.py  test_robustness.py  test_settling.py  test_spectral.py  test_stability.py  test_torch_compile.py  test_transformer_attention.py
reports_test/: best_config.json  compile_report.sh  index.md  report.tex
scripts/: analyze_sweep.py  generate_leaderboard.py  run_ablation_test.py  run_experiment_matrix.py  run_leaderboard_test.py  run_manifesto_test.py  run_metamodel_test.py  run_reduced_sweep.py  run_scaling_test.py  signal_1_parity.py  signal_2_energy.py  signal_3_data_efficiency.py  signal_4_depth.py  signal_5_generality.py  test_mlp.py  verify_phase0.py
tests/: conftest.py  test_adaptive_tile_pc.py  test_alignment.py  test_continual_learning.py  test_core_trainer.py  test_cross_domain_benchmark.py  test_data_curricula.py  test_diffusion_integration.py  test_domains.py  test_dreaming.py  test_equitile_advanced.py  test_equitile_domains.py  test_equitile_modes.py  test_equitile_refactored.py  test_equitile_sparsity_robustness.py  test_evaluation.py  test_finite_nudge.py  test_game.py  test_game_rpg.py  test_gradient_equivalence.py  test_knowledge.py  test_lerp_equivalence.py  test_lightning_integration.py  test_lm_demo.py  test_memory_o1.py  test_mep_integration.py  test_mock_analysis_integration.py  test_monitoring.py  test_neural_cube_smoke.py  test_new_domains.py  test_new_features.py  test_oracle.py  (+16 more)
(+810 files in other folders)
