[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["bioplausible.archive*", "bioplausible_ui_old*"]

[tool.setuptools]
include-package-data = true

[project]
name = "bioplausible"
version = "0.3.0"
description = "Unified platform for exploring the full spectrum of learning rules across machine intelligence"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "numpy",
    "scipy",
    "tqdm",
    "gymnasium",
    "scikit-learn",
    "transformers",
    "datasets",
    "tokenizers",
    "onnx",
    "onnxscript",
    "psutil",
    "PyQt6",
    "pyqtgraph",
    "kademlia",
    "pytest",
    "pytest-xdist",
    "pytest-qt",
    "flake8",
    "black",
    "isort",
    "matplotlib",
    "seaborn",
    "uvicorn",
    "fastapi",
    "pydantic",
    "optuna",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
knowledgebase = ["gpytorch", "botorch", "sympy"]
graphs = ["torch-geometric>=2.5", "networkx"]
spiking = ["snnTorch>=0.8"]
full = ["bioplausible[knowledgebase,graphs,spiking]"]

[project.scripts]
eqprop-verify = "bioplausible.cli:main"
eqprop-dashboard = "bioplausible_ui.app.main:main"
biopl = "bioplausible_ui.app.main:main"
biopl-lab = "bioplausible_ui.lab.main:main"
eqprop-coordinator = "bioplausible.p2p.coordinator:main"
eqprop-worker = "bioplausible.p2p.worker:main"
eqprop-p2p-worker = "bioplausible.p2p.p2p_worker:main"
biopl-scientist = "bioplausible.scientist.cli:main_scientist"
biopl-report = "bioplausible.scientist.cli:main_reporter"

[tool.pytest.ini_options]
testpaths = ["tests", "bioplausible_ui/tests"]
