[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docs.archive*"]
include = ["bioplausible", "bioplausible.*"]

[tool.setuptools]
include-package-data = true

[project]
name = "bioplausible"
version = "1.0.0"
description = "Unified platform for exploring the full spectrum of bio-plausible learning rules across machine intelligence"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torchvision",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "pandas",
    "tqdm",
    "rich",
    "gymnasium",
    "scikit-learn",
    "transformers",
    "datasets",
    "tokenizers",
    "onnx",
    "onnxscript",
    "psutil",
    "PyQt6",
    "pyqtgraph",
    "kademlia",
    "uvicorn",
    "fastapi",
    "pydantic>=2.0",
    "optuna",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist",
    "pytest-qt",
    "pytest-mock",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "pyright>=1.1",
    "pre-commit",
    "build",
    "twine",
    "pip-audit",
]
knowledgebase = ["gpytorch", "botorch", "sympy"]
graphs = ["torch-geometric>=2.5", "networkx"]
spiking = ["snnTorch>=0.8"]
full = ["bioplausible[knowledgebase,graphs,spiking]"]

[project.urls]
homepage = "https://github.com/bioplausible/bioplausible"
repository = "https://github.com/bioplausible/bioplausible"
documentation = "https://bioplausible.readthedocs.io"

[project.scripts]
eqprop-verify = "bioplausible.cli:main"
eqprop-coordinator = "bioplausible.p2p.coordinator:main"
eqprop-worker = "bioplausible.p2p.worker:main"
eqprop-p2p-worker = "bioplausible.p2p.p2p_worker:main"
biopl-scientist = "bioplausible.execution.cli:main_scientist"
biopl-report = "bioplausible.execution.cli:main_reporter"

[tool.pytest.ini_options]
testpaths = ["tests", "bioplausible/tests"]
markers = ["slow: marks tests as slow (e.g. MNIST full epoch)"]
addopts = "--cov=bioplausible --cov-report=term-missing --cov-fail-under=85 -p no:warnings"

[tool.coverage.run]
source = ["bioplausible"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.ruff]
target-version = "py314"
line-length = 88
preview = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "C9",   # mccabe complexity
    "PLR",  # pylint refactoring
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
    "RUF",  # ruff-specific
    "S",    # bandit security
    "TCH",  # flake8-type-checking
    "TRY",  # tryceratops
    "ARG",  # flake8-unused-arguments
    "PTH",  # pathlib
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "TID",  # flake8-tidy-imports
    "PYI",  # flake8-pyi
    "Q000", # flake8-quotes
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
]
ignore = ["E203", "E501", "N812", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "PLR0913", "PLR0915", "TRY003"]
"tests/**/conftest.py" = ["PLR0913", "PLR0915"]
"examples/**/*.py" = ["S101", "S106", "PLR0913", "PLR0915"]
"scripts/**/*.py" = ["S101", "S106", "PLR0913", "PLR0915", "TRY003"]
"docs/**/*.py" = ["S101", "S106", "PLR0913", "PLR0915", "TRY003"]

[tool.ruff.lint.flake8-type-checking]
enforce-typing-imports = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
# Enforce modern type hints (PEP 604, built-in generics)
good-names = ["i", "j", "k", "ex", "Run", "_", "T", "K", "V", "Self", "T_co", "T_contra"]

[tool.ruff.lint.pylint-refactoring]
max-arguments = 5
max-branches = 12
max-locals = 15
max-returns = 6
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true
indent-style = "space"
indent-width = 4
line-ending = "lf"
quote-style = "double"
docstring-code-format = true

[tool.ruff.format.docstring]
convention = "google"

[tool.pyright]
# Strict mode configuration
strict = true
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportGeneralTypeIssues = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInvalidTypeForm = "error"
reportInvalidTypeVarUse = "error"
reportInvalidTypeComments = "error"
reportUnusedTypeIgnore = "error"
reportUnusedCast = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedIgnore = "error"
reportUnusedParameter = "warning"
reportPrivateImportUsage = "warning"
reportDeprecated = "warning"
reportConstantRedefinition = "warning"
reportInconsistentConstructor = "warning"
reportInconsistentOverload = "warning"
reportInvalidStubStatement = "warning"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportWildcardImportFromLibrary = "warning"
reportImplicitRelativeImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUnusedCoroutine = "warning"
reportUnusedImport = "warning"
reportUnusedExcept = "warning"
reportUnusedExpression = "warning"
pythonVersion = "3.14"
targetVersion = "3.14"

[tool.hypothesis]
# Property-based testing configuration
database = {file = ".hypothesis/example.db"}
verbosity = "verbose"
phases = ["generate", "shrink", "explain"]
max_examples = 100
deadline = 500
print_blob = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
